<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JFMinesweeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ok">Okay</string>
    <string name="win">You have WON!</string>
    <string name="newgame">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="mine">Mine</string>
    <string name="flag">Flag</string>
    <string name="chrono">Time: </string>
    <string name="rows">Rows (1&#8211;9)</string>
    <string name="cols">Columns</string>
    <string name="beginner">Beginner</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="stats">Statistics</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="best_time">Best Time</string>
    <string name="reset">Reset</string>
    <string name="remain">Mines Left: </string>
    <string name="defaultCounter">00</string>
    <string name="zoomout">Zoom Out</string>
    <string name="zoomin">Zoom In</string>

</resources>